Fixing up accessibility by adding aria labels and changing contrasts. search bar and editor needs to be fixed

--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -40,7 +40,7 @@ body{
 }
 
 .topic-item-description {
-  color: #a0a0a0;
+  color: #595959;
 }
 
 .article-list {
@@ -66,7 +66,7 @@ padding: 10px 20px;
 }
 
 .article-item-description {
-  color: #a0a0a0;
+  color: #595959;
 }
 
 .list-title {
@@ -89,7 +89,7 @@ padding: 10px 20px;
   margin-bottom: 10px;
 }
 .single-article-meta {
-  color: #a0a0a0;
+  color: #595959;
 }
 
 .article-heading {
@@ -226,7 +226,7 @@ textarea {
 .sidebar-title {
   border-bottom: 1px solid #ccc;
   padding: 5px;
-  color: #a0a0a0;
+  color: #595959;
 }
 
 @-webkit-keyframes spin {
@@ -475,14 +475,14 @@ border: 1px solid #efefef;
   height: 100%;
   max-height: 30px;
   padding: 5px;
-  color: #a0a0a0;
+  color: #595959;
   background-color: #ccc;
   border: 1px solid transparent;
 }
 
 .search-button:hover,.search-button:active, .search-button:focus {
   color: #ccc;
-  background-color: #a0a0a0;
+  background-color: #595959;
 }
 
 .search-input {
@@ -500,7 +500,7 @@ border: 1px solid #efefef;
   margin-bottom: 20px;
 }
 .no-results {
-  color: #a0a0a0;
+  color: #595959;
   text-align: center;
 }
 .no-results .fa {
